--- a/style.css
+++ b/style.css
@@ -348,7 +348,7 @@
         }
 
          .container-proj .proje2{
-            background-image: url(imagens/Previsão-tempo.png);
+            background-image: url(imagens/paisagem1.2.png);
             align-items: center;
             width: 100px;
             height: 300px;
