--- a/style.css
+++ b/style.css
@@ -339,6 +339,13 @@
 
         }
 
+        .container-proj .proje{
+            background-image: url(imagens/portifolio.png);
+            width: 100px;
+            height: 300px;
+            position: relative;
+        }
+
 
         .container-proj .proje1{
             background-image: url(imagens/slid.png);
@@ -352,7 +359,7 @@
             align-items: center;
             width: 100px;
             height: 300px;
-            position: relative
+            position: relative;
         }
          .info-project p{
             align-items: center;
@@ -386,9 +393,56 @@
         display: block;
        }
 
-       .container-proj .project-box:hover{
+       .container-proj a:hover{
         cursor: pointer;
         transform: scale(1.3);
         transition: 2s;
        }
+
+         /* Estilo da página Formação Acadêmica */
+        .container-formacao .caixa{
+            color: white;
+            align-items: center;
+            text-align: justify;
+        }
+
+        .container-formacao .caixa .txt{
+            font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
+
+         .container-formacao .caixa .text1 p{
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            
+         }
+
+         .container-formacao .caixa .text1 {
+            color: white;
+            font-size: 20px;
+            text-shadow: 1px 1px 2px rgb(255, 85, 0), 0 0 25px rgb(255, 85, 0), 0 0 5px rgb(255, 85, 0);
+            margin-top: 2px;
+            margin-bottom: 10px;
+         }
+
+         .container-formacao{
+            display: flex;
+            
+         }
+
+         .container-formacao .logo-uninter {
+            align-items: center;
+            padding-top: 40px;
+         }
+         .section .text2{
+            font-size: 40px;
+            text-shadow: 1px 1px 2px rgb(255, 85, 0), 0 0 25px rgb(255, 85, 0), 0 0 5px rgb(255, 85, 0);
+            margin-top: 30px;
+         }
+         .container-formacao .caixa .ano{
+            color: black;
+            font-size: 20px;
+            text-shadow: 1px 1px 2px rgb(255, 85, 0), 0 0 25px rgb(255, 85, 0), 0 0 5px rgb(255, 85, 0);
+            margin-top: 2px;
+            margin-bottom: 10px;
+
+         }
        
