--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
        }
 
        body {
-        background-color: rgb(0, 0, 0);
+        background-color: #fff;
         transition: .5;
        }
 
@@ -77,17 +77,41 @@
         width: 100%;
         height: 700px;
        }
-    
 
-       .container-text{
-        padding: 200px 0 0 300px;
+       .caixa-main {
+        display:flex;
+        padding: 300px 0 0 450px;
+        padding-button: 0;
        }
 
-       .container-text h4{
+       .rede {
+        padding: 300px 0 0 450px;
+        padding-top: 0;
+
+       }
+
+      
+       .foto img{
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        border: 3px solid rgb(255, 85, 0);
+        object-fit: cover;
+       }
+
+       .container-text h1{
         padding: 5px;
         font-family: Arial, Helvetica, sans-serif;
         color: white;
+        font-size: 30px;
 
+       }
+
+       .container-text h2{
+        padding: 5px;
+        font-family: Arial, Helvetica, sans-serif;
+        color: white;
+        font-size: 20px;
        }
 
        .redes-sociais{
@@ -117,7 +141,7 @@
        }
        
         .section .text-sobre p {
-         color: white;
+         color: #000;
          font-size: 20px;
          padding: 30px;
          line-height: 1.4;
@@ -142,14 +166,14 @@
        }
 
        .tecnologias-logo h1{
-        color: white;
+        color: #000;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         text-align: center;
         margin-top: 70px;
        }
 
        .tecnologias-logo p{
-        color: white;
+        color: #000;
         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         font-size: 20px;
         text-align: center;
@@ -185,7 +209,7 @@
           display: none;
           align-items: center;
           background-color: rgb(255, 81, 0);
-          color: #fff;
+          color: #000;
           text-align: center;
           border-radius: 5px;
           padding: 5px;
@@ -196,7 +220,7 @@
 
        /* Estilo Minhas Habilidades */
        .container-habilidade {
-         color: white;
+         color: #000;
          font-size: 20px;
          padding-left: 100px;
          padding-right: 110px;
@@ -205,7 +229,6 @@
          display: flex;
          flex-direction: row;
          justify-content: space-between;
-         align-items: center;
          width: 1000px;
          height: 100%; 
          border: 4px solid;
@@ -217,6 +240,12 @@
          margin-bottom: 100px;
        }
 
+
+       .section .titulo{
+       padding: 30px;
+
+
+       }
        .container-habilidade .txt{
           border-radius: 15px;
           background: rgb(255, 85, 0);
@@ -237,7 +266,7 @@
 
        .txt .hab {
          display: none;
-         color: #fff;
+         color: white;
          text-align: center;
          padding: 5px;
          position: absolute;
@@ -266,7 +295,7 @@
         }
         /* Estilo Meus serviços contratáveis */
         .serviços{
-         color: white;
+         color: #000;
          font-size: 20px;
          padding-left: 80px;
          padding-right: 80px;
@@ -361,12 +390,12 @@
             height: 300px;
             position: relative;
         }
-         .info-project p{
+        .info-project p{
             align-items: center;
             text-align: center;
             color: white;
             padding-top: 130px;
-            padding-bottom: 100%;
+            padding-bottom: 150px;
             background: rgba(0, 0, 0, 0.539);
             width: 100%;
             
@@ -391,6 +420,7 @@
 
        .container-proj .project-box:hover .tex{
         display: block;
+        
        }
 
        .container-proj a:hover{
@@ -401,7 +431,7 @@
 
          /* Estilo da página Formação Acadêmica */
         .container-formacao .caixa{
-            color: white;
+            color: #000;
             align-items: center;
             text-align: justify;
         }
@@ -416,7 +446,7 @@
          }
 
          .container-formacao .caixa .text1 {
-            color: white;
+            color: #000;
             font-size: 20px;
             text-shadow: 1px 1px 2px rgb(255, 85, 0), 0 0 25px rgb(255, 85, 0), 0 0 5px rgb(255, 85, 0);
             margin-top: 2px;
